fix(review): resolve reminder review

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -377,5 +377,7 @@ nameNormalization.admin.cancel=Cancelled cleaning usernames.
 leaderboard.voice=Voice
 reminders.tooSoon=The given moment in time must at least happen in 1 minute from now
 reminders.list.empty=You have no reminders
-reminders.removed=Removed {0} {0, 1 {entry} other {entries}}
+reminders.removed=Removed {0} {0, select, 1 {entry} other {entries}}
 reminders.added=\ I'll remind you at {0} about: ```{1}```
+intRanges.providedTooMany=You can only provider {0} comma seperated elements in this argument
+reminders.outOfBounds=On of your ranges has elements larger then your reminder count which is {0}
