feat: slash reminders (#64)
* feat: slash reminders

* fix(review): resolve reminder review

--- a/bot/src/main/resources/translations/melijn/strings.properties
+++ b/bot/src/main/resources/translations/melijn/strings.properties
@@ -66,7 +66,7 @@ info.versionsFieldValue=**Java Version** {0}\
 clearQueue.cleared=Cleared
 
 shortTimeConverter.badFormatDetected=`{0}` is not formatted as (hh:)mm:ss
-intRangeConverter.badFormat=`{0}` is not a valid intRange (e.g. `4-9` or `1-3`, inclusive ranges btw).
+intRangeConverter.badFormat=`{0}` is not a valid intRange (e.g. `2` = [2], `2,3-4` = [2,3,4] or `1-3` = [1,2,3]).
 
 seek.seeked=Seeked to `[{0} / {1}]`
 seek.forwarded=Forwarded to `[{0} / {1}]`
@@ -375,3 +375,9 @@ leaderboard.guildXP=Server XP
 nameNormalization.admin.confirmationQuestion=Are you sure?
 nameNormalization.admin.cancel=Cancelled cleaning usernames.
 leaderboard.voice=Voice
+reminders.tooSoon=The given moment in time must at least happen in 1 minute from now
+reminders.list.empty=You have no reminders
+reminders.removed=Removed {0} {0, select, 1 {entry} other {entries}}
+reminders.added=\ I'll remind you at {0} about: ```{1}```
+intRanges.providedTooMany=You can only provider {0} comma seperated elements in this argument
+reminders.outOfBounds=On of your ranges has elements larger then your reminder count which is {0}
